# konda

./: .gitignore  .markdownlint.json  Android.mk  CLAUDE.md  CMakeLists.txt  CNAME  INSTALL.md  Makefile  PLUGIN_FORMATS.md  README.md  README_ANDROID.md  SIDELOAD_ANDROID.md  SineSynth.jucer  build_android.sh  create_dmg.sh  create_drag_drop_dmg.sh  install.sh  take_screenshot.sh
.github/workflows/: android-build.yml  audio-testing.yml
AudioWorkstation/Source/: Main.cpp  SineWaveVoice.h  WorkstationEditor.cpp  WorkstationEditor.h  WorkstationProcessor.cpp  WorkstationProcessor.h
MidiInjector/: main.cpp
MidiInjectorGUI/Source/: MidiInjectorApp.cpp  MidiInjectorApp.h
ParametricEQ/Source/: EQEditor.cpp  EQEditor.h  EQProcessor.cpp  EQProcessor.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SineWaveSound.h  SineWaveVoice.h
distribution/TURBEAUX_SOUNDS_Audio_Workstation/: INSTALL.md  PLUGIN_FORMATS.md  README.md
distribution/TURBEAUX_SOUNDS_Audio_Workstation_v1.1.0/: INSTALL.md  PLUGIN_FORMATS.md  README.md
docs/: index.html  install.html
docs/web/: app.js  index.html  konda-engine.js  konda-ui.js  sw.js
web/: README.md  app.js  index.html  konda-ui.js  style.css
